--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,6 @@
 {
-  "presets": [ "es2015", "react" ],
+  "presets": [
+    "@babel/preset-env", "@babel/preset-react"
+  ],
   "plugins": [ "transform-class-properties" ]
 }
